manifests/07_operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-operator
  namespace: openshift-marketplace
  annotations:
    config.openshift.io/inject-proxy: "marketplace-operator"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: marketplace-operator
  template:
    metadata:
      labels:
        name: marketplace-operator
    spec:
      serviceAccountName: marketplace-operator
      nodeSelector:
        node-role.kubernetes.io/master: ""
      priorityClassName: "system-cluster-critical"
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: Exists
        effect: "NoSchedule"
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 120
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 120
      containers:
        - name: marketplace-operator
          image: quay.io/openshift/origin-operator-marketplace:latest
          ports:
          - containerPort: 60000
            name: metrics
          - containerPort: 8080
            name: healthz
          command:
          - marketplace-operator
          args:
          - -registryServerImage=quay.io/openshift/origin-operator-registry
          - -defaultsDir=/defaults
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
