manifests/09_operator-ibm-cloud-managed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-operator
  namespace: openshift-marketplace
  annotations:
    config.openshift.io/inject-proxy: "marketplace-operator"
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    capability.openshift.io/name: "marketplace"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: marketplace-operator
  template:
    metadata:
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        openshift.io/required-scc: restricted-v2
      labels:
        name: marketplace-operator
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: marketplace-operator
      nodeSelector: {}
      priorityClassName: "system-cluster-critical"
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: Exists
          effect: "NoSchedule"
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 120
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 120
      containers:
        - name: marketplace-operator
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          image: quay.io/openshift/origin-operator-marketplace:latest
          ports:
            - containerPort: 8081
              name: metrics
            - containerPort: 8080
              name: healthz
          command:
            - marketplace-operator
          args:
            - -defaultsDir=/defaults
            - -clusterOperatorName=marketplace
            - -tls-cert
            - /var/run/secrets/serving-cert/tls.crt
            - -tls-key
            - /var/run/secrets/serving-cert/tls.key
            - -default-catalog-version=""
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
          resources:
            requests:
              cpu: 1m
              memory: 5Mi
          terminationMessagePolicy: FallbackToLogsOnError
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - name: marketplace-trusted-ca
              mountPath: /etc/pki/ca-trust/extracted/pem/
            - name: marketplace-operator-metrics
              mountPath: /var/run/secrets/serving-cert
      volumes:
        - emptyDir: {}
          name: tmp
        - name: marketplace-trusted-ca
          configMap:
            optional: true
            name: marketplace-trusted-ca
            items:
              - key: ca-bundle.crt
                path: tls-ca-bundle.pem
        - name: marketplace-operator-metrics
          secret:
            secretName: marketplace-operator-metrics
