manifests/10_operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-operator
  namespace: openshift-marketplace
spec:
  replicas: 1
  selector:
    matchLabels:
      name: marketplace-operator
  template:
    metadata:
      labels:
        name: marketplace-operator
    spec:
      serviceAccountName: marketplace-operator
      nodeSelector:
        node-role.kubernetes.io/master: ""
      priorityClassName: "system-cluster-critical"
      tolerations:
      - operator: Exists
      containers:
        - name: marketplace-operator
          image: quay.io/openshift/origin-operator-marketplace:latest
          ports:
          - containerPort: 60000
            name: metrics
          - containerPort: 8080
            name: healthz
          command:
          - marketplace-operator
          args:
          - -registryServerImage=quay.io/openshift/origin-operator-registry
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
