manifests/08_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketplace-operator-metrics
  namespace: openshift-marketplace
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    service.alpha.openshift.io/serving-cert-secret-name: marketplace-operator-metrics
    exclude.release.openshift.io/internal-openshift-hosted: "true"
  labels:
    name: marketplace-operator
spec:
  selector:
    name: marketplace-operator
  ports:
  - name: metrics
    port: 8383
    protocol: TCP
    targetPort: 8383
  - name: https-metrics
    port: 8081
    protocol: TCP
    targetPort: 8081
