manifests/12_servicecatalog.yaml
kind: Service
apiVersion: v1
metadata:
  name: controller-manager
  namespace: openshift-operators
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: svcat-controllermanager-ssl
    prometheus.io/scrape: "true"
    prometheus.io/scheme: https
spec:
  type: ClusterIP
  selector:
    app: svcat-controller-manager
  ports:
  - name: secure
    protocol: TCP
    port: 443
    targetPort: 8444
