manifests/13_networkpolicy_default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: openshift-marketplace
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    capability.openshift.io/name: "marketplace"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
