manifests/15_networkpolicy_unpack-bundles.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unpack-bundles
  namespace: openshift-marketplace
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    capability.openshift.io/name: "marketplace"
spec:
  podSelector:
    matchExpressions:
    - key: operatorframework.io/bundle-unpack-ref
      operator: Exists
    - key: olm.managed
      operator: In
      values:
      - "true"
  policyTypes:
    - Ingress
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 6443
